--- a/markdown/2016-7-2-TD-1-Deuxième-Partie.Rmd
+++ b/markdown/2016-7-2-TD-1-Deuxième-Partie.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Séance de travaux dirigés 1 - Première partie"
+title: "Séance de travaux dirigés 1 - Deuxième partie"
 output: html_document
 ---
 
@@ -7,62 +7,67 @@ output: html_document
 
 #### Questions de cours 
 
-* Rappeler la définition d'une mesure de probabilité.
+* Soit deux événements $A$ et $B$ de probabilité non-nulle. Rappeler la définition de la probabilité conditionnelle de $A$ sachant $B$. 
 
-* Rappeler la définition d'une suite croissante d'événements.
 
-* Soit $(A_n)$ 
-une telle suite. Que peut-on dire de la suite des probabilités P$(A_n)$ ?
+* Enoncer le *théorème des probabilités totales* et les conditions 
+  sous lesquelles il s'applique.
+
+* Soit $A$ un événement. On répéte une épreuve jusqu'à ce que la condition $C$ de probabilité non-nulle soit réalisée. Quelle est la probabilité de $A$ à l'issue de cette expérience ?
+
 
 ** ** 
 
 
 #### Exercice 1
 
-##### Question 1
+La fonction **sample** permet de tirer des nombres au hasard (avec ou sans remise), dans un ensemble fini. Par exemple, pour simuler $n$ lancers d'un dé à 6 faces, on pourra définir la fonction suivante
 
-Soit $X$ un nombre positif mesuré à l'issue d'une épreuve aléatoire. On suppose que
-$$
-\forall 0 \leq s \leq t < \infty  \, , \quad  \mbox{P} ( X \in [s,t)) = \int_s^t e^{-x} dx. 
-$$
+```{r}
+de6 <- function(n) sample(1:6, n, replace = T)
+```
 
-* Pour tout $t \geq 0$, montrer que P$(X \geq t) =e^{- t}$. 
+Deux lancers pourront donner le résultat suivant
 
-* Calculer P$(\sin X \geq 0)$.
+```{r}
+de6(n = 2)
+```
 
-** **
-
-##### Question 2
-
-Soit $U$ un nombre pris au hasard dans $[0,1]$ tel que
-$$
-\forall 0 \leq a \leq b  \leq 1 \, , \quad  \mbox{P} ( U \in [a,b)) = b-a .
-$$
-
-* Pour tout $0 \leq s \leq t < \infty$,  calculer la probabilité P$(\ln(1/U) \in [s,t))$.
-
-
-* En déduire une manière d'obtenir un nombre au hasard ayant les mêmes propriétés que $X$.  
-
-** **
-
-##### Question 3
-
-Le langage R dispose de nombreux generateurs aléatoires, dont un générateur de variables aléatoires uniformément réparties sur (0,1). 
-
-
-* En utilisant le générateur aléatoire de loi uniforme **runif**, effectuer $n = 1000000$ simulations de la variable $X$.
+On considère la variable $X$ définie par le programme suivant 
 
 ```{r}
 n = 1000000
-x <- -log(runif(n))
+x <- sample(de6(n), n, replace = T)
 ```
 
-* Calculer la fréquence de l'événement $X > 1$ et comparer cette valeur empirique à la valeur théorique calculée dans la question 1. Idem pour la probabilité de l'événement $(\sin(X)>0)$. 
+* Calculer la probabilité P$(X = 6)$.
+
+* Calculer la probabilité P$(X = 1)$.
+
+* Vérifier que le résultat de l'expérience précédente est proche de vos prédictions.
 
 ```{r}
-mean(x > 1)
-exp(-1)
-mean(sin(x) > 0)
+mean(x == 1)
 ```
+
+
+** **
+
+#### Exercice 2
+
+Dans le championnat de basketball de l'Uhgduzstan, il y a un tirs sur trois à un point, un tirs sur deux à deux points et un tirs sur six  à 3 points. Vlad Rabovitch est le meilleur joueur du pays. Lorsqu'il marque, sa probabilité de réussite à un point est de 1/2, à deux points de 1/3, à trois points de 1/4. 
+
+##### Question 1 
+
+* Quelle est la probabilité que Vlad marque lors d'un tir ? 
+
+##### Question 2 
+
+* Vlad vient de rater un tir. Quelle est la probabilité qu'il ait tiré à trois points ?
+
+* Vlad vient de réussir un tir. Quelle est la probabilité qu'il ait tiré à trois points ?
+
+##### Question 3
+
+* Combien de tirs réussis doit-on attendre en moyenne avant de voir Vlad marquer à trois points ? 
 
