--- a/html/CM1.Rmd
+++ b/html/CM1.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 #### Axiome des probabilités
 
-En [théorie des probabilités](https://fr.wikipedia.org/wiki/Probabilit%C3%A9), l'ensemble des éventualités $\Omega$ est appelé l'*ensemble fondamental*. En général, on ne le décrit pas. Cet ensemble est muni d'une [tribu](https://fr.wikipedia.org/wiki/Tribu_(math%C3%A9matiques)) ${\cal A}$ contenant sous-ensembles de  $\Omega$ appelés {\it événements}.
+En [théorie des probabilités](https://fr.wikipedia.org/wiki/Probabilit%C3%A9), l'ensemble des éventualités $\Omega$ est appelé l'*ensemble fondamental*. En général, on ne le décrit pas. Cet ensemble est muni d'une [tribu](https://fr.wikipedia.org/wiki/Tribu_(math%C3%A9matiques)) ${\cal A}$ contenant sous-ensembles de  $\Omega$ appelés *événements*.
 
 ** ** 
 
@@ -41,7 +41,7 @@ Soit $B$ un événement de probabilité P$(B) > 0$. On note P$(A|B)$ la probabil
 $A$ sachant $B$ 
 
 
-$$ {\rm P}(A~|~B) = \frac{ {\rm P}(A \cap B)}{ {\rm P}(B)} \, . $$
+$$ {\rm P}(A~|~B) = \frac{ {\rm P}(A \cap B) }{ {\rm P}(B) } \, . $$
 
 
 On dit que $A$ et $B$ sont indépendants si
