--- a/markdown/2016-7-4-TD-3-Deuxième-Partie.Rmd
+++ b/markdown/2016-7-4-TD-3-Deuxième-Partie.Rmd
@@ -5,9 +5,9 @@ output: html_document
 
 ** **
 
-#### Questions de cours 
+#### [Questions de cours](http://francoio.github.io/html/CM3.html) 
 
-* Rappeler la définition d'une variable aléatoire de Bernoulli, d'une variable étagée
+* Rappeler la définition d'une variable aléatoire de Bernoulli, d'une variable aléatoire étagée. Quelle est l'espérance de ces variables aléatoires ? 
 
 * Rappeler la définition de la [loi de Poisson](https://fr.wikipedia.org/wiki/Loi_de_Poisson) de paramètre $\lambda >0$.
 
@@ -15,35 +15,8 @@ output: html_document
 
 ** **
 
-#### Exercice 3
 
-Au [football](https://fr.wikipedia.org/wiki/Lois_du_jeu), on peut normalement marquer des points de la tête ou du pied. On suppose que le nombre de points marqués lors d'une partie est un nombre aléatoire $K$ tiré suivant la loi de Poisson de paramètre $\lambda >0$.
-
-La probabilité pour qu'un point soit marqué de la tête est $p$, $0 < p < 1$, et on suppose que les points sont marqués indépendamment les uns des autres. 
-
-##### Question 1
-
-* Sachant que $K = k$ points ont été marqués lors d'une partie, montrer que la probabilité conditionnelle  pour que $L = \ell$ points soient marqués de la tête est 
-$$
-{\rm P} (L = \ell ~|~ K = k ) = \frac{k!}{\ell! (k - \ell)!} p^\ell (1 - p)^{k - \ell} , \quad \ell = 0, \dots, k
-$$
-
-##### Question 2
-
-* En déduire la probabilité que l'on observe $L = \ell$ points marqués de la tête lors d'une partie.
-
-* Calculer l'espérance de $L$.
-
-##### Question 3
-
-En fait, le modèle est imparfait et il existe une probabilité $\epsilon>0$ pour qu'un point soit [marqué de la main](https://es.wikipedia.org/wiki/La_mano_de_Dios). 
-
-* Quelle est la probabilité d'observer au moins un point marqué de la main lors d'une partie ? 
-
-
-** **
-
-#### Exercice 4
+#### Exercice 1
 
 On joue à pile (P) ou face (F)  avec une pièce équilibrée $n$ fois de suite. On définit $X_n$ comme le nombre de fois où l'on obtient le [motif FF](http://www.lifl.fr/~jdelahay/pls/213.pdf) (compté avec les recouvrements). Par exemple, dans la réalisation suivante, 
 
@@ -61,7 +34,7 @@ nous avons $n = 13$ et $X_n = 4$. En effet, le motif FFF contribue deux fois au 
 
 * Décrire $X_n$ comme une variable étagée.
 
-* En déduire E[$X_n$]
+* En déduire la valeur de l'espérance E[$X_n$].
 
 * Justifier que la loi de $X_n$ n'est pas la loi binomiale. 
 
@@ -77,3 +50,33 @@ $${\rm P}( X_n = 0 ) =  f_n/2^n ,\quad n \geq 2 $$
 *Indication:* On appliquera la [formule des probabilités totales](https://fr.wikipedia.org/wiki/Formule_des_probabilit%C3%A9s_totales)
 deux fois de suite (en prenant pour mesure de référence une mesure de probabilité conditionnelle). 
 
+** **
+
+
+#### Exercice 2
+
+Au [football](https://fr.wikipedia.org/wiki/Lois_du_jeu), on peut normalement marquer des buts de la tête ou du pied. On suppose que le nombre de buts marqués lors d'une partie est un nombre aléatoire $K$ tiré suivant la loi de Poisson de paramètre $\lambda >0$.
+
+La probabilité pour qu'un but soit marqué de la tête est $p$, $0 < p < 1$, et on suppose que les buts sont marqués indépendamment les uns des autres. 
+
+##### Question 1
+
+* Sachant que $K = k$ buts ont été marqués lors d'une partie, montrer que la probabilité conditionnelle  pour que $L = \ell$ buts soient marqués de la tête est 
+$$
+{\rm P} (L = \ell ~|~ K = k ) = \frac{k!}{\ell! (k - \ell)!} p^\ell (1 - p)^{k - \ell} , \quad \ell = 0, \dots, k
+$$
+
+##### Question 2
+
+* En déduire la probabilité que l'on observe $L = \ell$ buts marqués de la tête lors d'une partie.
+
+* Calculer l'espérance de la variable aléatoire $L$.
+
+##### Question 3
+
+En fait, le modèle est imparfait et il existe une probabilité $\epsilon>0$ pour qu'un but soit [marqué de la main](https://es.wikipedia.org/wiki/La_mano_de_Dios). 
+
+* Quelle est la probabilité d'observer au moins un but marqué de la main lors d'une partie ? 
+
+
+** **
