--- a/markdown/2016-7-8-Test-2.Rmd
+++ b/markdown/2016-7-8-Test-2.Rmd
@@ -11,5 +11,56 @@ Le [formulaire de réponse](https://github.com/francoio/francoio.githib.io/Rmd/F
 
 #### Problème 1 
 
+Soit $n \geq 2$ et $(U_i)_{i=1,\dots, n}$, une suite finie de variables indépendantes de loi uniforme sur $(0,1)$. Pour tout $i = 1, \dots, n - 1$, on pose
+$$
+X_i = \left\{ \begin{array}{cl}
+1 & {\rm si ~} U_i < U_{i+1} \\
+0 & {\rm sinon.} \\
+\end{array}
+\right.
+$$
+et on définit le nombre de pas croissants dans la suite $(U_i)$ par la formule suivante
+$$
+Y_n = \sum_{i = 1}^{n-1} X_i \, .
+$$
+
+** **
 
 
+##### Question 1
+
+* Démontrer que ${\rm P}(U_1 < U_2) = 1/2$ et que ${\rm P}(U_1 < U_2 < U_3) = 1/6$.
+
+* Calculer ${\rm E}[Y_n]$.
+
+** **
+
+##### Question 2
+
+* Calculer ${\rm Var}[X_1]$ et ${\rm Cov}[X_1, X_2]$. 
+
+* Calculer la valeur de la variance Var$[Y_3]$.
+
+** ** 
+
+##### Question 3
+
+* Pour tout $n \geq 2$, montrer que
+$$
+{\rm Var}[X]  = \sum_{i = 1}^{n-1} {\rm Var}[X_i] + 2 \sum_{i = 1}^{n-2} {\rm Cov}[X_i, X_{i+1}].
+$$
+
+* Calculer Var$[Y_n]$ pour tout $n \geq 2$.
+
+** **
+
+##### Question 3
+
+Dans la suite finie $(U_i)_{i=1,\dots,n}$, on note
+
+$$ A_{n-1} = \frac{Y_n }{ n-1}$$
+
+le nombre moyen d'accroissements. 
+
+
+* Combien de tirages sont suffisants pour qu'avec une probabilité supérieure à 0.99, $A_{n-1}$ soit proche de la valeur 1/2 à $10^{-2}$ près ?
