--- a/html/CM9.Rmd
+++ b/html/CM9.Rmd
@@ -5,13 +5,14 @@ output: html_document
 
 ** **
 
-#### [Espérance conditionnelle](https://fr.wikipedia.org/wiki/Esp%C3%A9rance_conditionnelle)
+#### [Espérance conditionnelle](https://francoio.github.io/)
+
 
 Soit $(X,Y)$ un couple de variables aléatoires réelles de densité $f(x,y)$.   
 
 #####  Espérance conditionnelle de Y sachant $X=x$ 
 
-L'espérance conditionnelle de Y sachant $X=x$ est l'espérance de la loi de densité $f_Y^{X=x} (y)$. Elle définit une fonction de la variable $x$
+L'[espérance conditionnelle](https://fr.wikipedia.org/wiki/Esp%C3%A9rance_conditionnelle)  de Y sachant $X=x$ est l'espérance de la loi de densité $f_Y^{X=x} (y)$. Elle définit une fonction de la variable $x$
 
 $$
 {\rm E}[Y|X=x]  =  \varphi(x)  = \int y f_Y^{X=x} (y) dy.
@@ -25,7 +26,7 @@ $$
 L'espérance conditionnelle de Y sachant $X$ est la variable aléatoire  
 
 $$
-{\rm E}[Y|X]  =   \varphi(X)
+{\rm E}[Y|X]  = \varphi(X) \, .
 $$
 
 
@@ -38,7 +39,7 @@ $$
 Nous avons 
 
 $$
-{\rm E}[Y]  = {\rm E}[ {\rm E}[Y|X] ] 
+{\rm E}[Y]  = {\rm E}[ {\rm E}[Y|X] ] = \int {\rm E}[Y|X=x] f_X(x) dx .
 $$
 
 ** **
