--- a/markdown/2016-7-8-Test-2.Rmd
+++ b/markdown/2016-7-8-Test-2.Rmd
@@ -11,6 +11,39 @@ Le [formulaire de réponse](https://github.com/francoio/francoio.githib.io/Rmd/F
 
 #### Problème 1 
 
+Soient $X_1 , \dots , X_n$ $n$ variables aléatoires indépendantes et de même loi, de fonction de répartition continue sur $\mathbb{R}$. Pour tout $1\leq m \leq n$, on dit qu'un record est battu à l'épreuve $m$ si $m = 1$ ou si
+
+$$
+X_m > \max_{i < m} X_i
+$$
+
+** **
+
+
+##### Question 1
+
+* Calculer la probabilité de battre un record à l'épreuve $m$
+
+
+
+** ** 
+
+##### Question 2
+
+Soit $N$ le nombre de records battus après $n$ épreuves. 
+
+* Ecrire la variable aléatoire $N$ comme une variable étagée.
+
+* Donner l'espérance de $N$ pour $n$ quelconque. 
+
+* Donner l'espérance de $N$ pour $n = 27$. 
+
+
+
+** **
+
+#### Problème 2 
+
 Soit $n \geq 2$ et $(U_i)_{i=1,\dots, n}$, une suite finie de variables indépendantes de loi uniforme sur $(0,1)$. Pour tout $i = 1, \dots, n - 1$, on pose
 $$
 X_i = \left\{ \begin{array}{cl}
@@ -27,7 +60,7 @@ $$
 ** **
 
 
-##### Question 1
+##### Question 3
 
 * Démontrer que ${\rm P}(U_1 < U_2) = 1/2$ et que ${\rm P}(U_1 < U_2 < U_3) = 1/6$.
 
@@ -35,7 +68,7 @@ $$
 
 ** **
 
-##### Question 2
+##### Question 4
 
 * Calculer ${\rm Var}[X_1]$ et ${\rm Cov}[X_1, X_2]$. 
 
@@ -43,7 +76,7 @@ $$
 
 ** ** 
 
-##### Question 3
+##### Question 5
 
 * Pour tout $n \geq 2$, montrer que
 $$
@@ -54,7 +87,7 @@ $$
 
 ** **
 
-##### Question 3
+##### Question 6
 
 Dans la suite finie $(U_i)_{i=1,\dots,n}$, on note
 
@@ -62,4 +95,49 @@ $$ A_{n-1} = \frac{Y_n }{ n-1}$$
 
 le nombre moyen d'accroissements. 
 
-* Combien de tirages sont suffisants pour qu'avec une probabilité supérieure à 0.99, $A_{n-1}$ soit proche de la valeur 1/2 à $10^{-2}$ près 
+* Combien de tirages suffisent pour qu'avec une probabilité supérieure à 0.99, $A_{n-1}$ soit proche de la valeur 1/2 à $10^{-2}$ près. 
+
+
+** **
+
+
+#### Problème 3
+
+On considère un couple $(X,Y)$ de variables aléatoires de densité jointe
+
+$$
+\forall (x,y) \in \mathbb{R}^2 \, , \quad f(x,y) = c xy^2 \mathbb{1}_D (x,y) \, ,
+$$
+
+où $c$ est une constante positive et $D$ = $\{ (x,y) \in \mathbb{R}^2 \; ; \; 0 < x <  y < 1\}$ .
+
+** **
+
+##### Question 7 
+
+* Déterminer la valeur de $c$.
+
+** ** 
+
+##### Question 8
+
+* Déterminer la fonction de répartition de la variable $Y$. Donner sa valeur au point $t = 2/3$. 
+
+** **
+
+
+
+##### Question 9
+
+* Ecrire un algorithme de simulation d'un couple de densité $f(x,y)$.
+
+** **
+
+
+##### Question 10
+
+* On pose $Z =  X Y$. Déterminer la densité de la loi de la variable $Z$.
+
+
+** **
+
