--- a/markdown/2016-6-2-TD-1-Deuxième-Partie.Rmd
+++ b/markdown/2016-6-2-TD-1-Deuxième-Partie.Rmd
@@ -56,7 +56,7 @@ mean(x == 1)
 
 #### Exercice 2
 
-Dans le championnat de basketball de l'Uhgduzstan, il y a un tirs sur trois à un point, un tirs sur deux à deux points et un tirs sur six  à 3 points. Vlad Rabovitch est le meilleur joueur du pays. Lorsqu'il marque, sa probabilité de réussite à un point est de 1/2, à deux points de 1/3, à trois points de 1/4. 
+Dans le championnat de basketball de l'Uhgduzstan, il y a un tir sur trois à un point, un tir sur deux à deux points et un tir sur six  à 3 points. Vlad Rabovitch est le meilleur joueur du pays. Lorsqu'il marque, sa probabilité de réussite à un point est de 1/2, à deux points de 1/3, à trois points de 1/4. 
 
 ##### Question 1 
 
@@ -74,7 +74,7 @@ Dans le championnat de basketball de l'Uhgduzstan, il y a un tirs sur trois à u
 
 ** **
 
-#### Exercice 4 
+#### Exercice 3 
 
 Soient $n$ un entier non-nul et $(p_i)_{i=1,\dots, n}$ $n$ nombres positifs dont la somme totale est égale à 1.  
 
